welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: not found: value T
 for (i <- 0 to T.length-1) {
                ^